--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,22 @@
   "SETTINGS AND DATA MANAGEMENT"
-  * See how dgrid works for rendering lists and provide a custom renderer widget
-  * Make a widget that accepts one store, an editing widget, a displaying widget per item  and a "style" (+button at the bottom, in-line
+
+
+  TODO THIS WEEK:
+  * Make a widget that accepts one store, an editing widget, a displaying widget per item and a "style" (+button at the bottom, in-line
     editing, etc.), and make it render/edit a bunch of items.
 
+    REMAINING TASKS:
+  * Fix the "submit message" issue (change spot where it appears, or give the option of getting it to appear underneath so that 
+    tiny inline forms will still work)
+  * Take "ds" out of the equation for EditableList, emit a signal instead and display the global error thing in case of problems
+  * See if it's OK to pass just the store as a whole, rather than the two parameters, BOTH for EditingWidget and EditableList
+  * Move the widget to an external file, including CSSes (don't forget the overlay one)
+  * Make the "add" form reset after adding
+  * Add option to add the *adding* widget (inplace before, inplace after, button before, button after)
+  * Add option for deletion confirmation via alert (on by default)
 
-TODO THIS WEEK:
- * Option to edit inline or not
- * Fix CSS for forms
- * Add visual (configurable) HTML element to edit or delete an entry
- * Add option for deletion confirmation or not
- * Add option to add the *adding* widget (inplace before, inplace after, button before, button after)
 
+  NEXT WEEK:
   * Select box: create a widget that allows user to pick one amongst one of the allowed line-record -- PLUS the current one!
   * Use the dgrid widgets and the select widget as engines for the settings screen, check that dynamic updating all works
 
@@ -22,7 +28,7 @@ TODO THIS WEEK:
   * Make sure that code always follows the same standards everywhere, dojo.widget is dojo/widget, and require() only requires the necessary
   * Improve the look of widgets: Overlay with reload icon, top bar with shade, pick form, nothingToPick form, etc.
 
-  DEADLINE: 15/3
+  DEADLINE: 30/3
                           ----------------------------
                           !!  READY FOR A USE CASE  !!
                           ----------------------------
@@ -37,9 +43,10 @@ TODO THIS WEEK:
 
   * Write messages infrastructure, where app can send messages (email, sms) and then a queue manager sends them recording the
     status. Write modules to send (smtp/sms gateway) _and_ receive (pop/sms gateway) messages. Note: this is simply a very fancy
-    JsonRest store.
+    JsonRest store that uses an API
 
-  * Integrate message-sending with the current simple comment infrastructure (!)
+  * Integrate message-sending with the current simple comment infrastructure (!). user picks if it's an SMS or if it's an email.
+    The sending/editing widget will have to change accordingly
 
   User management and invites in Hotplate:
 
@@ -306,3 +313,6 @@ TODO THIS WEEK:
   * Take out that rubbish about partial update from Cache.js
   * Change update so that values in schema but NOT in update object are case/set (doesn't this already happen?!?)
   * Make a note: PUT is not partial, it is complete
+  * See how dgrid works for rendering lists and provide a custom renderer widget
+  * Fix issue where if entries get out of visible area and list is reloaded, it stops adding them to the grid when added! Geeee, I had to
+    write my own JsonObserver for this.
