--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,14 @@
-  "SETTINGS AND DATA MANAGEMENT"
 
-  THIS WEEK:
-  * Use Use the dgrid widgets and the select widget as engines for the settings screen, finally finally use it!
-
-  AND THEN:
+  THIS WEEK
   * Add a "new contact" form, and a contacts browser/editor. Add ability to type messages underneath contacts. (30 mins and 200 lines of code?)
+    Make sure you have "contact type" in the list of configurations
 
   AND THEN:
   * Normalise all the topic.publish namespace, which is messy now. Watch out: comet events are echoed as well, put those in a different ns
   * Improve the look of widgets: Overlay with reload icon, top bar with shade, pick form, nothingToPick form, etc.
 
-
   (Check: http://dojo-toolkit.33424.n3.nabble.com/Question-on-CSS-with-widgets-td3995316.html)
-  DEADLINE: 30/3
-                          ----------------------------
-                          !!  READY FOR A USE CASE  !!
-                          ----------------------------
+  DEADLINE: 15/4
 
   **************************************************************************************************************************
   Note: at this point, I can create a store server-side in 2 minutes, _and_ a view/editing system client-side in 10 minutes.
@@ -313,3 +306,4 @@
   * Make a widget that accepts one store, an editing widget, a displaying widget per item and a "style" (+button at the bottom, in-line
     editing, etc.), and make it render/edit a bunch of items.
   * Select box: create a widget that allows user to pick one amongst one of the allowed line-record -- PLUS the current one!
+  * Use Use the dgrid widgets and the select widget as engines for the settings screen, finally finally use it!
